[package]
author = "Calvin Hoy"
name = "zerocfa"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fmtastic = "0.1.0"
peg = "0.8.2"
pest_derive = "2.7.5"
rustyline = { version = "13.0.0", default-features = false }

[profile.release]
debug = true
